2010-03-06  Tri Kurniawan Wijaya  <trikurniawanwijaya@gmail.com>

	* include/dlvhex/PredicateTable.hpp: Output the answer set in a new format.
	* include/dlvhex/MLPSolver.hpp: Likewise.
	* src/dlvhex/HexGrammarPTToASTConverter.cpp: Likewise.
	* src/dlvhex/Interpretation.cpp: Likewise.

	* include/dlvhex/MLPSolver.hpp: Adding S in the instantiation, remove T from M (before call instatiation). 
	* testsuite/TestMLPSolver.cpp: Likewise.

	* testsuite/TestMLPSolver.cpp: Adding an example about reachability and test non-ground module atom.
	* examples/module-Reachability.hex: Likewise.

	* src/dlvhex/HexGrammarPTToASTConverter.cpp: Fixing bug in storing predicate arity and user_pred_tuple.

	* src/dlvhex/HexGrammarPTToASTConverter.cpp: Fixing bug in storing module atom.

	* testsuite/TestMLPSolver.cpp: Adding test cases for more than one module call in one module.
	* examples/module1-Two.hex: Likewise.
	* examples/module2-Two.hex: Likewise.

2010-03-05  Tri Kurniawan Wijaya  <trikurniawanwijaya@gmail.com>

	* include/dlvhex/Logger.hpp: Cleaning some printing Information.
	* include/dlvhex/MLPSolver.hpp: Likewise.
	* src/dlvhex/HexGrammarPTToASTConverter.cpp: Likewise.
	* testsuite/TestMLPSolver.cpp: Likewise.

	* testsuite/TestMLPSolver.cpp: Adding more testcases.
	* examples/module-Inconsistent.hex: Likewise.
	* examples/module-Not-ic-Stratified.hex: Likewise.
	* examples/module1-Big.hex: Likewise.

	* include/dlvhex/MLPSolver.hpp: Giving return value whether ic-stratified or not.

	* src/dlvhex/Interpretation.cpp: print edb, one fact each line 

	* include/dlvhex/MLPSolver.hpp: fixing bug on finding the answer sets (because A is not reverted)

2010-03-04  Tri Kurniawan Wijaya  <trikurniawanwijaya@gmail.com>

	* examples/module1-MainModules.hex: Handling more than one main module.
	* include/dlvhex/MLPSolver.hpp: Likewise.

	* include/dlvhex/MLPSolver.hpp: Fixing rewrite and completing the recursion.

2010-03-03  Tri Kurniawan Wijaya  <trikurniawanwijaya@gmail.com>
